--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="//unpkg.com/alpinejs" defer></script>
     <title>Document</title>
 </head>
 <body>
+    <div x-data="{ open: false }">
+        <button @click="open = true">Expand</button>
+     
+        <span x-show="open">
+          Content...
+        </span>
+    </div>
     <h1>Welcome to this site</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit architecto rem cupiditate. Libero harum doloribus corrupti maxime sequi voluptas ducimus iure et voluptatem, fuga laudantium ipsam rem voluptatibus nemo ullam?</p>
 </body>
